fix (header): fix header align

--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -85,7 +85,7 @@
 .menuContainer {
     display: flex;
     justify-content: flex-end;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: column;
 }
 .menuContainer p {
